--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -39,11 +39,12 @@ input, select { font-size:13px; padding:8px; }
 .table-wrapper { flex-direction:column; gap:0; }
 .side-panel { display:none; }
 table { min-width:100%; }
-table thead { display:none; }
-table, tbody, tr, td { display:block; width:100%; }
+/*table thead { display:none; }*/
+/*table, tbody, tr, td { display:block; width:100%; }*/
 tr { margin-bottom:15px; border-bottom:2px solid var(--pk-green); }
-td { text-align:right; padding:10px; position:relative; }
-td::before { content: attr(data-label); position:absolute; left:10px; font-weight:bold; text-transform:uppercase; color:#666; font-size:12px; }
+/*td { text-align:right; padding:10px; position:relative; }*/
+/*td::before { content: attr(data-label); */
+position:absolute; left:10px; font-weight:bold; text-transform:uppercase; color:#666; font-size:12px; }
 }
 
 /* ===== FOOTER ===== */
