--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -144,7 +144,7 @@ text-align: center;
 <div class="table-container">
 <table>
 <thead>
-<tr><th>Train</th><th>Next</th><th>Prev</th><th>Delay</th><th>Speed</th><th>Update</th></tr>
+<tr><th>Train</th><th>Next Station</th><th>Previous Station.</th><th>Delay</th><th>Speed</th><th>Update</th></tr>
 </thead>
 <tbody id="liveRow">
 <tr><td colspan="6" style="text-align:center;padding:40px;color:#999;">Search and select a train to begin.</td></tr>
