--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -144,7 +144,15 @@ text-align: center;
 <div class="table-container">
 <table>
 <thead>
-<tr><th>Train</th><th>Next Station</th><th>Previous Station.</th><th>Delay</th><th>Speed</th><th>Update</th></tr>
+<tr>
+  <th>Train<br><small>ٹرین</small></th>
+  <th>Next Station<br><small>اگلا اسٹیشن</small></th>
+  <th>Previous Station<br><small>پچھلا اسٹیشن</small></th>
+  <th>Delay<br><small>تاخیر</small></th>
+  <th>Speed<br><small>رفتار</small></th>
+  <th>Update<br><small>تازہ معلومات</small></th>
+</tr>
+
 </thead>
 <tbody id="liveRow">
 <tr><td colspan="6" style="text-align:center;padding:40px;color:#999;">Search and select a train to begin.</td></tr>
