--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -118,9 +118,9 @@ text-align: center;
 </header>
 <!-- MENU -->
 <nav>
-<a href="index.html">Home</a>
-<a href="timing.html">Train Timing</a>
-<a href="ticketing.html">Ticketing</a>
+<a href="/index.html">Home</a>
+<a href="/timing.html">Train Timing</a>
+<a href="/ticketing.html">Ticketing</a>
 
 
 </nav>
