--- a/stations.html
+++ b/stations.html
@@ -85,7 +85,7 @@ li {
   <a href="complaint.html">Register Complaint</a>
   <a href="contactus.html">Contact Us</a>
    <a href="downloads.html">Downloads</a>
-  <a href="tracking1.html" class="blink-tracking">Train Tracking</a>
+   <a href="/prtracker" class="seat-avail">Train Tracking</a>
 </nav>
 
 <main style="padding:20px;">
