--- a/gallery.html
+++ b/gallery.html
@@ -111,6 +111,7 @@ nav a:hover {
 <script>
 // Array of YouTube video links
 const videos = [
+  { url: "https://www.youtube.com/embed/x3qVbtE6vcA", title: "Khanpur Inspection" },
   { url: "https://www.youtube.com/embed/6aW1KYOQzw8", title: "Khanpur Inspection" },
   { url: "https://www.youtube.com/embed/TybV8BkjkvE", title: "Jamalo Train Initiative" },
   { url: "https://www.youtube.com/embed/yT8yL9KTQr4", title: "14-August-25, DS Office Sukkur" },
