--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PakRail Online</title>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <style>
@@ -40,29 +41,13 @@
   min-height: calc(100vh - 130px);
   padding: 15px;
   gap: 10px;
-  justify-content: center;
-  align-items: center;
 }
 
-/* ===== VERTICAL BARS ===== */
-.vertical-bar {
-  width: 30px;
-  background: #ccc; /* vertical bar color */
-}
-
-/* ===== ADS COLUMN ===== */
-.ads-column {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  justify-content: center;
-}
-
-.ads-box {
-  width: 160px;   /* width of ad box */
-  height: 120px;  /* height of ad box */
+/* ===== ADS PANELS ===== */
+.ads-panel {
+  flex: 0 0 160px;
   background: #f1f1f1;
-  border: 1px dashed #aaa;
+  border: 1px dashed #ccc;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -72,9 +57,10 @@
 
 /* ===== CENTER MENU ===== */
 .center-menu {
+  flex: 1;
   display: grid;
-  grid-template-columns: repeat(2, 140px);
-  grid-template-rows: repeat(3, 120px);
+  grid-template-columns: repeat(2, 140px); /* 2 columns */
+  grid-template-rows: repeat(3, 120px);    /* 3 rows */
   gap: 18px;
   justify-content: center;
   align-content: center;
@@ -122,9 +108,12 @@
 
 /* ===== MOBILE ===== */
 @media (max-width: 768px) {
-  .vertical-bar,
-  .ads-column {
+  .ads-panel {
     display: none;
+  }
+
+  .header-center {
+    font-size: 18px;
   }
 
   .center-menu {
@@ -140,6 +129,7 @@
 }
 </style>
 </head>
+
 <body>
 
 <!-- ===== HEADER ===== -->
@@ -160,33 +150,50 @@
 <!-- ===== MAIN ===== -->
 <div class="main-container">
 
-  <!-- LEFT VERTICAL BAR -->
-  <div class="vertical-bar"></div>
-
   <!-- LEFT ADS -->
-  <div class="ads-column">
-    <div class="ads-box">Google Ad 1</div>
-    <div class="ads-box">Google Ad 2</div>
+  <div class="ads-panel">
+    -
   </div>
 
   <!-- CENTER MENU -->
   <div class="center-menu">
-    <a href="timing.html" class="menu-item"><i class="fas fa-clock"></i><span>Train Timing</span></a>
-    <a href="availSeats.html" class="menu-item"><i class="fas fa-chair"></i><span>Seat Availability</span></a>
-    <a href="ticketing.html" class="menu-item"><i class="fas fa-ticket"></i><span>Ticketing</span></a>
-    <a href="/prtracker" class="menu-item"><i class="fas fa-train"></i><span>Train Tracking</span></a>
-    <a href="stations.html" class="menu-item"><i class="fas fa-map-marker-alt"></i><span>Stations</span></a>
-    <a href="downloads.html" class="menu-item"><i class="fas fa-download"></i><span>Downloads</span></a>
+
+    <a href="timing.html" class="menu-item">
+      <i class="fas fa-clock"></i>
+      <span>Train Timing</span>
+    </a>
+
+    <a href="availSeats.html" class="menu-item">
+      <i class="fas fa-chair"></i>
+      <span>Seat Availability</span>
+    </a>
+
+    <a href="ticketing.html" class="menu-item">
+      <i class="fas fa-ticket"></i>
+      <span>Ticketing</span>
+    </a>
+
+    <a href="/prtracker" class="menu-item">
+      <i class="fas fa-train"></i>
+      <span>Train Tracking</span>
+    </a>
+
+    <a href="stations.html" class="menu-item">
+      <i class="fas fa-map-marker-alt"></i>
+      <span>Stations</span>
+    </a>
+
+    <a href="downloads.html" class="menu-item">
+      <i class="fas fa-download"></i>
+      <span>Downloads</span>
+    </a>
+
   </div>
 
   <!-- RIGHT ADS -->
-  <div class="ads-column">
-    <div class="ads-box">Google Ad 1</div>
-    <div class="ads-box">Google Ad 2</div>
+  <div class="ads-panel">
+   -
   </div>
-
-  <!-- RIGHT VERTICAL BAR -->
-  <div class="vertical-bar"></div>
 
 </div>
 
