--- a/index.html
+++ b/index.html
@@ -199,7 +199,21 @@
 
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
-  © <span id="year"></span> pakrail.online
+  <!-- FOOTER -->
+<footer>
+   <div>
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="disclaimer.html">Disclaimer</a> |
+    <a href="about-us.html">About Us</a> |
+    <a href="contact-us.html">Contact</a>
+  </div>
+  <div style="font-size:13px;color:#dcdcdc;">
+    Independent information portal.
+      © <span id="year"></span> pakrail.online
+  </div>
+
+
+  
 </footer>
 
 <script>
