--- a/index.html
+++ b/index.html
@@ -139,12 +139,9 @@
   </div>
 
   <div class="header-center">
-    Pakistan Railways – Sukkur Division
+    PakRail.online
   </div>
 
-  <div class="header-right">
-    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w80">
-  </div>
 </header>
 
 <!-- ===== MAIN ===== -->
