--- a/index.html
+++ b/index.html
@@ -36,11 +36,20 @@
 }
 
 /* ===== MAIN LAYOUT ===== */
+.main-container-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
 .main-container {
   display: flex;
-  min-height: calc(100vh - 130px);
+  min-height: calc(100vh - 230px); /* header + footer + horizontal ads */
   padding: 15px;
   gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 /* ===== ADS PANELS ===== */
@@ -53,6 +62,20 @@
   justify-content: center;
   font-size: 14px;
   color: #777;
+}
+
+/* Horizontal ads above & below menu */
+.ads-horizontal {
+  width: 100%;
+  height: 90px;
+  background: #f1f1f1;
+  border: 1px dashed #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  color: #777;
+  margin: 5px 0;
 }
 
 /* ===== CENTER MENU ===== */
@@ -99,16 +122,31 @@
 
 /* ===== FOOTER ===== */
 .footer {
-  background: #003366;
-  color: white;
+  background: #2e7d32;
+  color: #ffffff;
+  padding: 15px 10px;
   text-align: center;
-  padding: 12px;
-  font-size: 14px;
+  font-family: Arial, sans-serif;
+  margin-top: 20px;
+}
+
+.footer a {
+  color: #ffeb3b;
+  text-decoration: none;
+  margin: 0 8px;
+}
+
+.footer a:hover {
+  text-decoration: underline;
 }
 
 /* ===== MOBILE ===== */
 @media (max-width: 768px) {
   .ads-panel {
+    display: none;
+  }
+
+  .ads-horizontal {
     display: none;
   }
 
@@ -127,25 +165,6 @@
     height: 110px;
   }
 }
-  /* Footer */
-footer {
-  background:#2e7d32;
-  color:#ffffff;
-  padding:15px 10px;
-  text-align:center;
-  font-family:Arial, sans-serif;
-  margin-top:40px;
-}
-
-footer a {
-  color:#ffeb3b;
-  text-decoration:none;
-  margin:0 8px;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
 </style>
 </head>
 
@@ -160,64 +179,70 @@ footer a:hover {
   <div class="header-center">
     PakRail.online
   </div>
-
 </header>
 
-<!-- ===== MAIN ===== -->
-<div class="main-container">
+<!-- ===== MAIN WRAPPER ===== -->
+<div class="main-container-wrapper">
 
-  <!-- LEFT ADS -->
-  <div class="ads-panel">
-    -
+  <!-- TOP HORIZONTAL AD -->
+  <div class="ads-horizontal">
+    Google Ad Space (Top)
   </div>
 
-  <!-- CENTER MENU -->
-  <div class="center-menu">
+  <!-- MAIN CONTENT -->
+  <div class="main-container">
 
-    <a href="timing.html" class="menu-item">
-      <i class="fas fa-clock"></i>
-      <span>Train Timing</span>
-    </a>
+    <!-- LEFT ADS -->
+    <div class="ads-panel">-</div>
 
-    <a href="availSeats.html" class="menu-item">
-      <i class="fas fa-chair"></i>
-      <span>Seat Availability</span>
-    </a>
+    <!-- CENTER MENU -->
+    <div class="center-menu">
+      <a href="timing.html" class="menu-item">
+        <i class="fas fa-clock"></i>
+        <span>Train Timing</span>
+      </a>
 
-    <a href="ticketing.html" class="menu-item">
-      <i class="fas fa-ticket"></i>
-      <span>Ticketing</span>
-    </a>
+      <a href="availSeats.html" class="menu-item">
+        <i class="fas fa-chair"></i>
+        <span>Seat Availability</span>
+      </a>
 
-    <a href="/prtracker" class="menu-item">
-      <i class="fas fa-train"></i>
-      <span>Train Tracking</span>
-    </a>
+      <a href="ticketing.html" class="menu-item">
+        <i class="fas fa-ticket"></i>
+        <span>Ticketing</span>
+      </a>
 
-    <a href="stations.html" class="menu-item">
-      <i class="fas fa-map-marker-alt"></i>
-      <span>Stations</span>
-    </a>
+      <a href="/prtracker" class="menu-item">
+        <i class="fas fa-train"></i>
+        <span>Train Tracking</span>
+      </a>
 
-    <a href="downloads.html" class="menu-item">
-      <i class="fas fa-download"></i>
-      <span>Downloads</span>
-    </a>
+      <a href="stations.html" class="menu-item">
+        <i class="fas fa-map-marker-alt"></i>
+        <span>Stations</span>
+      </a>
+
+      <a href="downloads.html" class="menu-item">
+        <i class="fas fa-download"></i>
+        <span>Downloads</span>
+      </a>
+    </div>
+
+    <!-- RIGHT ADS -->
+    <div class="ads-panel">-</div>
 
   </div>
 
-  <!-- RIGHT ADS -->
-  <div class="ads-panel">
-   -
+  <!-- BOTTOM HORIZONTAL AD -->
+  <div class="ads-horizontal">
+    Google Ad Space (Bottom)
   </div>
 
 </div>
 
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
-  <!-- FOOTER -->
-<footer>
-   <div>
+  <div>
     <a href="privacy-policy.html">Privacy Policy</a> |
     <a href="disclaimer.html">Disclaimer</a> |
     <a href="about-us.html">About Us</a> |
@@ -227,9 +252,6 @@ footer a:hover {
     Independent information portal.
       © <span id="year"></span> pakrail.online
   </div>
-
-
-  
 </footer>
 
 <script>
