--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ footer a:hover {
 </div>
 
 <!-- ===== FOOTER ===== -->
-<footer class="footer">
+<div class="footer">
   <!-- FOOTER -->
 <footer>
    <div>
@@ -228,10 +228,8 @@ footer a:hover {
       © <span id="year"></span> pakrail.online
   </div>
 
-
-  
 </footer>
-
+</div>
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
 </script>
