--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 }
 
 /* ===== FOOTER ===== */
-.footer {
+.footer-ad {
   background: #003366;
   color: white;
   text-align: center;
@@ -212,7 +212,9 @@ footer a:hover {
   </div>
 
 </div>
-
+<div class="footer-ad">
+  -
+</div>
 <!-- ===== FOOTER ===== -->
 <div class="footer">
   <!-- FOOTER -->
