--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   transform: translateY(-4px);
 }
 
-/* ===== FOOTER ===== */
+/* ===== FOOTER ad===== */
 .footer-ad {
   background: #003366;
   color: white;
