--- a/ticketing.html
+++ b/ticketing.html
@@ -210,12 +210,9 @@ nav a:hover {
   </div>
 
   <div class="header-center">
-    Pakistan Railways – Sukkur Division (Ticketing)
+    Ticketing
   </div>
 
-  <div class="header-right">
-    <img src="https://drive.google.com/thumbnail?id=1UD6SmPAI9x-y22oW4CIgrDaItR4MHttx&sz=w150">
-  </div>
 </header>
 
 <!-- ================= NAV ================= -->
@@ -224,9 +221,8 @@ nav a:hover {
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
-  <a href="complaint.html">Register Complaint</a>
-  <a href="contactus.html">Contact Us</a>
-  <a href="downloads.html">Downloads</a>
+  
+ 
   <a href="/prtracker" class="seat-avail">Train Tracking</a>
 </nav>
 
@@ -251,33 +247,6 @@ nav a:hover {
 
   </div>
 
-</div>
-
-<!-- ================= CONTENT ================= -->
-<div class="container">
-  <div class="image-section">
-    <img src="https://drive.google.com/thumbnail?id=1aJcf0ApyrGA72EFnl1SzHmeq49KT_igf&sz=w400">
-    <p><strong style="color:blue">Muhammad Ibrahim Balouch</strong><br>
-    Divisional Commercial Officer<br>
-    Pakistan Railways, Sukkur Division</p>
-  </div>
-
-   <div class="text-section">
-    The Sukkur Division operates <strong>27 POS stations</strong>,
-    providing <strong>24/7 ticketing and reservation services</strong>.
-    Ticket Vending Machines (TVMs) are installed at <strong>Rohri and Rahimyar Khan</strong>,
-    offering convenient reservation options.
-
-    <p>All main line stations, as well as major branch line stations, are equipped for
-    <strong>computerized ticketing</strong>, and work is underway to extend this facility
-    to the remaining branch line stations.</p>
-
-    <p>Passengers can also make reservations through the <strong>RABTA mobile app</strong>
-    and the <strong>Pakistan Railways website</strong>.</p>
-
-    <p>A dedicated <strong>IT server room</strong> at the Sukkur Reservation Office is staffed
-    by IT personnel from <strong>8:00 AM to midnight</strong>.</p>
-  </div>
 </div>
 
 <!-- ================= FOOTER ================= -->
