--- a/availSeats.html
+++ b/availSeats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Pakistan Railways – Seat Availability</title>
+<title>PakRail.online – Seat Availability</title>
 <meta name="description" content="Live train tracking of Pakistan Railways. Check real-time train status, railway booking, delays and running position.">
   <meta name="keywords" content="Pakistan Railways live tracking, train status Pakistan, railway ticket,Pak Rail tracking">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -220,7 +220,7 @@ footer a:hover {
 
 <!-- TOP PANEL -->
 <div class="top-panel">
-  <h1>Pakistan Railways</h1>
+  <h1>PakRail.online</h1>
   <div><strong>Check Seat / Berth Availability</strong></div>
 </div>
 <!-- MENU -->
