--- a/timing.html
+++ b/timing.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Train Timing – Sukkur Division</title>
+<title>Train Timing – pakrail.online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Choices.js CSS -->
@@ -169,7 +169,7 @@ th {
 <body>
 
 <!-- HEADER -->
-<header>Pakistan Railways – Sukkur Division (Train Timing)</header>
+<header>PakRail.online (Train Timing)</header>
 
 <!-- MENU -->
 <nav>
@@ -178,9 +178,7 @@ th {
   <a href="timing.html">Train Timing</a>
     <a href="availSeats.html" class="seat-avail">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
-  <a href="complaint.html">Register Complaint</a>
-  <a href="contactus.html">Contact Us</a>
- <a href="/prtracker" class="seat-avail">Train Tracking</a>
+   <a href="/prtracker" class="seat-avail">Train Tracking</a>
 </nav>
 
 <!-- SEARCH PANEL -->
