--- a/stations.html
+++ b/stations.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Pakistan Railways Sukkur Division – Stations</title>
+<title>PakRail.online – Stations</title>
 
 <style>
 body {
@@ -74,7 +74,7 @@ li {
 
 <body>
 
-<header>Pakistan Railways – Sukkur Division (Stations)</header>
+<header>PakRail.online (Stations)</header>
 
 <nav id="menu">
   <a href="index.html">Home</a>
@@ -82,10 +82,7 @@ li {
   <a href="timing.html">Train Timing</a>
     <a href="availSeats.html" class="blink-tracking">Seat Availability</a>
   <a href="ticketing.html">Ticketing</a>
-  <a href="complaint.html">Register Complaint</a>
-  <a href="contactus.html">Contact Us</a>
-   <a href="downloads.html">Downloads</a>
-   <a href="/prtracker" class="seat-avail">Train Tracking</a>
+  <a href="/prtracker" class="seat-avail">Train Tracking</a>
 </nav>
 
 <main style="padding:20px;">
