--- a/prtracker/index.html
+++ b/prtracker/index.html
@@ -109,7 +109,7 @@ text-align: center;
 </div>
 
 <div class="header-center">
-       Pakistan Railways - Live Tracker
+       PakRail.online - Live Tracker
 </div>
 
 <div class="header-right">
