--- a/ticketing.html
+++ b/ticketing.html
@@ -198,10 +198,25 @@ nav a:hover {
     height: 105%;
   }
 }
-  
-/* ===== FOOTER ===== */
-.footer-text { text-align: center; font-size: 14px; color: #555; margin-top: 20px; }
+  /* Footer */
+footer {
+  background:#2e7d32;
+  color:#ffffff;
+  padding:15px 10px;
+  text-align:center;
+  font-family:Arial, sans-serif;
+  margin-top:40px;
+}
 
+footer a {
+  color:#ffeb3b;
+  text-decoration:none;
+  margin:0 8px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 
 </style>
 </head>
