--- a/timing.html
+++ b/timing.html
@@ -162,7 +162,25 @@ th {
   50%  { opacity: 0; }
   100% { opacity: 1; }
 }
+  /* Footer */
+footer {
+  background:#2e7d32;
+  color:#ffffff;
+  padding:15px 10px;
+  text-align:center;
+  font-family:Arial, sans-serif;
+  margin-top:40px;
+}
 
+footer a {
+  color:#ffeb3b;
+  text-decoration:none;
+  margin:0 8px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 </style>
 </head>
 
