--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@ footer a:hover {
     </a>
 
     <a href="downloads.html" class="menu-item">
-      <i class="fas fa-download"></i>
-      <span>Downloads</span>
+      <i class="fas fa-airplane"></i>
+      <span>Flights Schedule</span>
     </a>
 
   </div>
