--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ footer a:hover {
       <span>Stations</span>
     </a>
 
-    <a href="downloads.html" class="menu-item">
+    <a href="https://fly.pakrail.online" class="menu-item">
       <i class="fas fa-airplane"></i>
       <span>Flights Schedule</span>
     </a>
