--- a/index.html
+++ b/index.html
@@ -146,6 +146,25 @@ footer a {
 footer a:hover {
   text-decoration: underline;
 }
+  /* ================= NAV ================= */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+nav a:hover {
+  background-color: #1a237e;
+}
+
 </style>
 </head>
 
