--- a/index.html
+++ b/index.html
@@ -181,7 +181,18 @@ nav a:hover {
   </div>
 
 </header>
-
+<nav>
+  <a href="pakrail.html">Pakistan Railways Intro</a>
+  <!--
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+  <a href="ticketing.html">Ticketing</a>
+  <a href="complaint.html">Register Complaint</a>
+  <a href="contactus.html">Contact Us</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="tracking.html" class="blink-tracking">Train Tracking</a>
+  -->
+</nav>
 <!-- ===== MAIN ===== -->
 <div class="main-container">
 
